tests/wpt/tests/third_party/test262/test/language/expressions/async-generator/early-errors-expression-yield-star-after-newline.js
// Copyright 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Caitlin Potter <caitp@igalia.com>
esid: sec-generator-function-definitions
description: >
  A newline may not precede the `*` token in a `yield` expression.
negative:
  phase: parse
  type: SyntaxError
features: [async-iteration]
---*/

$DONOTEVALUATE();

(async function*() {
  yield
  * 1;
});
